--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
+
+{% extends 'rango/base.html' %}
 {% load staticfiles %} <!-- New line -->
 
 
-<html>
-    <head>
-    </head>
-        <title>Rango</title>
-    <body>
-        <h1>Rango says...</h1>
-        <div>
-            here is the about page. <br />
-            <p>This tutorial has been put together by <strong>Mohamed Sohail</strong></p>
-        </div>
-        <div>
-            <a href="/rango/">Index</a><br />
-            <img src="/static/images/rango.jpg" alt="Picture of Rango" /> <!-- New line -->
-            <img src="/media/cat.jpg" alt="Picture of a Cat" />
-        </div>
-    </body>
-</html>
+
+
+{% block title_block %}
+    About Rango
+{% endblock %}
+
+
+{% block body_block %}
+<h1>Rango says...</h1>
+<div>
+    here is the about page. <br />
+    This tutorial has been put together by David Maxwell.<br />
+</div>
+<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
+{% endblock %}
