Finished chapter 9 with tests.

--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -12,7 +12,7 @@
     {% endif %}
 {% endblock %}
     
-{% block body_block %}
+{% block content %}
     {% if category %}
     <h1>{{ category.name }}</h1>
     {% if pages %}
@@ -25,7 +25,9 @@
     <strong>No pages currently in category.</strong>
     {% endif %}
 
+    {% if user.is_authenticated %}
     <a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br />
+    {% endif %}
         {% else %}
             The specified category does not exist.
         {% endif %}
